--- a/config/config_template.json
+++ b/config/config_template.json
@@ -27,7 +27,8 @@
       "admin_password":"PASSWORD",
       "users": [
         {"username":"francisco","password": "PASSWORD","id":"francisco"},
-        {"username":"alex","password": "PASSWORD","id":"alex"}
+        {"username":"alex","password": "PASSWORD","id":"alex"},
+        {"username":"shexSchemaUploader","password": "PASSWORD","id":"shexschemauploader"}
       ]
     },
     "elasticsearch": {
