--- a/ansible/roles/cordra/tasks/03-setup_cordra.yml
+++ b/ansible/roles/cordra/tasks/03-setup_cordra.yml
@@ -72,7 +72,7 @@
       java_cert:
         cert_alias: search_engine_server
         cert_path: "{{ server.apps_dir + '/certs/search_engine_server.crt' }}"
-        keystore_path: "{{ java_home + '/jre/lib/security/cacerts' }}"
+        keystore_path: "{{ java_home + '/lib/security/cacerts' }}"
         keystore_pass: changeit
         state: present
 
